# python-package-test

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: dev-workflow.yml  python-app.yml  python-publish.yml
dev-scripts/: README.md  clean.sh  create-venv.sh  initialise.sh  install-deps.sh  update-requirements.sh  update-venv.sh
python_package_test/: module.py
requirements/: dev-all.txt  dev-only.in  dev-only.txt  lint-only.txt  package.txt  tox-only.in  tox-only.txt  typing-only.txt  unittest-only.txt
scripts/: clean.sh  dev-venv-setup.sh  update-requirements.sh
test/: test_module.py
