[project]
name = "python_package_test"
authors = [
    { name="Reece Jones", email="reece.jones131@gmail.com" }
]
description = "Test package for modern Python packaging and CI"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English"
]
dynamic = [ "version", "dependencies" ]

[project.urls]
Homepage = "https://github.com/MC-DeltaT/python-package-test"
Issues = "https://github.com/MC-DeltaT/python-package-test/issues"

[build-system]
requires = [ "setuptools>=64", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements/package.txt" ] }

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
# Prevent ruff from thinking test is a third party package.
lint.isort.known-local-folder = ["test"]
lint.ignore = [
    "E731"  # Lambda assigned to name
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]    # Allow import *
